--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeflex": "^2.0.0",
     "primevue": "^3.10.0",
     "vue": "^3.2.25"
   },
