--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.2",
     "primeflex": "^2.0.0",
     "primevue": "^3.10.0",
     "vue": "^3.2.25"
@@ -14,7 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2",
+    "vite": "^2.7.10",
     "vue-tsc": "^0.29.8"
   }
 }
