--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fontsource/open-sans": "^4.5.2",
     "primeflex": "^2.0.0",
+    "primeicons": "^5.0.0",
     "primevue": "^3.10.0",
     "vue": "^3.2.25"
   },
