--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.33"
   },
   "devDependencies": {
+    "@babel/types": "^7.17.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
