--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
   "name": "microtop",
-  "version": "0.0.3",
+  "version": "0.0.4",
+  "description": "Application to represent bibliography on Belarusian microtoponymy",
+  "author": "Alyaxey Yaskevich",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/yaskevich/microtop.git"
+  },
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/open-sans": "^4.5.8",
-    "primeflex": "^3.2.0",
+    "@fontsource/open-sans": "^4.5.11",
+    "@types/topojson-client": "^3.1.1",
+    "d3": "^7.6.1",
+    "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
-    "primevue": "^3.12.6",
-    "vue": "^3.2.33"
+    "primevue": "^3.15.0",
+    "topojson-client": "^3.1.0",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@babel/types": "^7.17.10",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "typescript": "^4.6.4",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.13"
+    "@babel/types": "^7.18.10",
+    "@types/d3": "^7.4.0",
+    "@types/topojson": "^3.2.3",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "sass": "^1.54.4",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.7",
+    "vite-ssg": "^0.20.2",
+    "vue-tsc": "^0.40.1"
   }
 }
